--- a/UserUI/src/component/home/home.scss
+++ b/UserUI/src/component/home/home.scss
@@ -2,7 +2,7 @@ $primary-color: #e53637;
 $secondary-color: #0c2b4b;
 $white-color: #ffffff;
 $heading-color: #111111;
-$para-color: #5C5C5C;
+$para-color: #5c5c5c;
 $black-color: #000000;
 $heading-color-2: #323232;
 $normal-color: #1c1c1c;
@@ -12,181 +12,68 @@ $border: #ebebeb;
 $border-1: #e1e1e1;
 
 @mixin transition($args...) {
-    -webkit-transition: $args;
-    -moz-transition: $args;
-    -ms-transition: $args;
-    -o-transition: $args;
-    transition: $args;
+  -webkit-transition: $args;
+  -moz-transition: $args;
+  -ms-transition: $args;
+  -o-transition: $args;
+  transition: $args;
 }
 
 .home {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 
-    p {
-        font-size: 20px;
-    }
+  p {
+    font-size: 20px;
+  }
 }
 
 .slide {
-    img {
-        width: 100%;
-        height: 800px;
-        object-fit: fill;
+  img {
+    width: 100%;
+    height: 800px;
+    object-fit: fill;
+    position: relative; /* Để có thể điều khiển phần tử con */
+  }
+
+  .content-section {
+    background-size: cover;
+    background-position: center;
+    min-height: 390px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end; /* Chữ nổi lên ở phía dưới */
+    align-items: center;
+    color: $white-color;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease; /* Hiệu ứng di chuyển cho .content-section */
+
+    &:hover {
+      transform: translateY(-10px); /* Di chuyển .content-section lên khi hover */
     }
+
+    h1, h3, p {
+      position: relative;
+      z-index: 1; /* Đảm bảo các phần tử này lên trước */
+    }
+
+    .arrow-icon {
+      position: absolute;
+      bottom: 20px; /* Khoảng cách với đáy .content-section */
+      font-size: 24px;
+      color: $white-color;
+      background-color: rgba($black-color, 0.5); /* Màu nền mờ */
+      padding: 10px;
+      border-radius: 50%; /* Hình dạng của background */
+      transition: background-color 0.3s ease;
+
+      &:hover {
+        background-color: rgba($black-color, 0.8); /* Màu nền sáng hơn khi hover */
+        cursor: pointer;
+      }
+    }
+  }
+  
 }
-
-// /*---------------------
-//   Hero
-// -----------------------*/
-// .hero__slider {
-
-//     &.owl-carousel {
-
-//         .owl-item {
-
-//             &.active {
-
-//                 .hero__text {
-
-//                     h6 {
-//                         top: 0;
-//                         opacity: 1;
-//                     }
-
-//                     h2 {
-//                         top: 0;
-//                         opacity: 1;
-//                     }
-
-//                     p {
-//                         top: 0;
-//                         opacity: 1;
-//                     }
-
-//                     .primary-btn {
-//                         top: 0;
-//                         opacity: 1;
-//                     }
-//                 }
-//             }
-//         }
-
-//         .owl-nav {
-
-//             button {
-//                 font-size: 36px;
-//                 color: #333333;
-//                 position: absolute;
-//                 left: 75px;
-//                 top: 50%;
-//                 margin-top: -18px;
-//                 line-height: 29px;
-
-//                 &.owl-next {
-//                     left: auto;
-//                     right: 75px;
-//                 }
-//             }
-//         }
-//     }
-// }
-
-// .hero__items {
-//     height: 800px;
-//     padding-top: 230px;
-// }
-
-// .hero__text {
-
-//     h6 {
-//         color: $primary-color;
-//         font-size: 14px;
-//         font-weight: 700;
-//         text-transform: uppercase;
-//         letter-spacing: 2px;
-//         margin-bottom: 28px;
-//         position: relative;
-//         top: 100px;
-//         opacity: 0;
-//         @include transition(all, .3s);
-//     }
-
-//     h2 {
-//         color: $heading-color;
-//         font-size: 48px;
-//         font-weight: 700;
-//         line-height: 58px;
-//         margin-bottom: 30px;
-//         position: relative;
-//         top: 100px;
-//         opacity: 0;
-//         @include transition(all, .6s);
-//     }
-
-//     p {
-//         font-size: 16px;
-//         line-height: 28px;
-//         margin-bottom: 35px;
-//         position: relative;
-//         top: 100px;
-//         opacity: 0;
-//         @include transition(all, .9s);
-//     }
-
-//     .primary-btn {
-//         position: relative;
-//         top: 100px;
-//         opacity: 0;
-//         @include transition(all, 1.1s);
-
-//         span {
-//             font-size: 20px;
-//             position: relative;
-//             top: 4px;
-//             font-weight: 700;
-//         }
-//     }
-// }
-
-// .hero__social {
-//     margin-top: 190px;
-
-//     a {
-//         font-size: 16px;
-//         color: #3d3d3d;
-//         display: inline-block;
-//         margin-right: 32px;
-
-//         &:last-child {
-//             margin-right: 0;
-//         }
-//     }
-// }
-
-// .set-bg {
-//     background-repeat: no-repeat;
-//     background-size: cover;
-//     background-position: top center;
-// }
-
-// .section-title {
-// 	margin-bottom: 45px;
-// 	text-align: center;
-// }
-
-// .section-title span {
-// 	color: #e53637;
-// 	font-size: 14px;
-// 	font-weight: 700;
-// 	text-transform: uppercase;
-// 	letter-spacing: 2px;
-// 	margin-bottom: 15px;
-// 	display: block;
-// }
-
-// .section-title h2 {
-// 	color: #111111;
-// 	font-weight: 700;
-// 	line-height: 46px;
-// }
