--- a/UserUI/src/component/home/home.scss
+++ b/UserUI/src/component/home/home.scss
@@ -1,79 +1,12 @@
-$primary-color: #e53637;
-$secondary-color: #0c2b4b;
-$white-color: #ffffff;
-$heading-color: #111111;
-$para-color: #5c5c5c;
-$black-color: #000000;
-$heading-color-2: #323232;
-$normal-color: #1c1c1c;
-$background: #f5f5f5;
-$background-2: #f2f2f2;
-$border: #ebebeb;
-$border-1: #e1e1e1;
+.sub-content {
+  backdrop-filter: blur(5px);
 
-@mixin transition($args...) {
-  -webkit-transition: $args;
-  -moz-transition: $args;
-  -ms-transition: $args;
-  -o-transition: $args;
-  transition: $args;
-}
-
-.home {
-  display: flex;
-  justify-content: center;
-
-  p {
-    font-size: 20px;
-  }
-}
-
-.slide {
-  img {
-    width: 100%;
-    height: 800px;
-    object-fit: fill;
-    position: relative; /* Để có thể điều khiển phần tử con */
+  a {
+    text-decoration: none;
+    font-size: 2rem;
   }
 
-  .content-section {
-    background-size: cover;
-    background-position: center;
-    min-height: 390px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end; /* Chữ nổi lên ở phía dưới */
-    align-items: center;
-    color: $white-color;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease; /* Hiệu ứng di chuyển cho .content-section */
-
-    &:hover {
-      transform: translateY(-10px); /* Di chuyển .content-section lên khi hover */
-    }
-
-    h1, h3, p {
-      position: relative;
-      z-index: 1; /* Đảm bảo các phần tử này lên trước */
-    }
-
-    .arrow-icon {
-      position: absolute;
-      bottom: 20px; /* Khoảng cách với đáy .content-section */
-      font-size: 24px;
-      color: $white-color;
-      background-color: rgba($black-color, 0.5); /* Màu nền mờ */
-      padding: 10px;
-      border-radius: 50%; /* Hình dạng của background */
-      transition: background-color 0.3s ease;
-
-      &:hover {
-        background-color: rgba($black-color, 0.8); /* Màu nền sáng hơn khi hover */
-        cursor: pointer;
-      }
-    }
+  .sub-title {
+    color: white;
   }
-  
 }
